# GRETSI25_Label-Argent_Transformee-de-Kravchuk-realignee-implementation-efficace-et-illustration

./: .gitignore  README.md  demo-kravchuk-bat-signal.ipynb  demo-kravchuk-elementary-signals.ipynb  pyproject.toml  requirements.txt
.github/workflows/: install-with-poetry.yml  install-with-requirements.yml  main.yml
notebooks/: kravchuk-aligned-transform.ipynb  kravchuk-bat-signal.ipynb  kravchuk-elementary-signals.ipynb  kravchuk-time-precision.ipynb
src/: chirp_signals.py  detection_test.py  elementary_signals.py  kravchuk_display.py  kravchuk_transform.py  pkravchuk_transform.py  preamble.py  spherical_statistics.py  ssht_transform.py  stft_transform.py  white_noises.py  window_analysis.py
