[project]
name = "2025-gretsi-from-kravchuk-to-ssht"
version = "0.1.0"
description = ""
authors = [
    {name = "bpascal, jflamant, rbardenet"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyssht (>=1.5.2,<2.0.0)",
    "numpy (<2)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "h5py (>=3.13.0,<4.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "cmocean (>=4.0.3,<5.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=1.8.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
